--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,57 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/lbltitulo"
+
+    <TabHost
+        android:id="@+id/conversores"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="OPERACIONES BASICAS"
-        android:layout_marginTop="20dp"
-        android:textAlignment="center"
-        />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/txtnum1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lbltitulo"
-        android:hint="Escribe un numero"
-        android:layout_margin="10dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/txtnum2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/txtnum1"
-        android:hint="Escribe un numero"
-        android:layout_margin="10dp"/>
-    <Spinner
-        android:id="@+id/cboOperacionesBasicas"
-        android:layout_below="@id/txtnum2"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="120dp"
-        android:layout_width="wrap_content"
-        android:entries="@array/operacionesbasicas"
-        android:layout_height="wrap_content"/>
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/lblRespuesta"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btnCalcular"
-        android:layout_marginTop="20dp"
-        android:text="Respuesta: ?"
-        android:textAlignment="center" />
+                <LinearLayout
+                    android:id="@+id/tabMonedas"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnCalcular"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cboOperacionesBasicas"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"
-        android:onClick="calcular"
-        android:text="Calcular" />
+                </LinearLayout>
 
+                <LinearLayout
+                    android:id="@+id/tabLongitud"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tabMasa"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+            </FrameLayout>
+        </LinearLayout>
+    </TabHost>
 </RelativeLayout>
