--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,121 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/contenidoView"
     tools:context=".MainActivity">
 
-    <TabHost
-        android:id="@+id/tbhConversores"
+    <EditText
+        android:id="@+id/txtBuscarAmigos"
+        android:hint="Buscar amigos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"/>
+    <ListView
+        android:id="@+id/ltsamigos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <RelativeLayout
-                    android:id="@+id/tabAgua"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical">
-
-                    <EditText
-                        android:id="@+id/txtCantidadAgua"
-                        android:layout_marginTop="40dp"
-                        android:hint="Cantidad"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-                    <TextView
-                        android:id="@+id/lblRespuestaAgua"
-                        android:layout_below="@id/txtCantidadAgua"
-                        android:text="Respuesta: ?"
-                        android:layout_marginTop="40dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-                    <Button
-                        android:id="@+id/btnCalcularAgua"
-                        android:layout_below="@id/lblRespuestaAgua"
-                        android:layout_marginTop="40dp"
-                        android:text="Calcular"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/tabArea"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="10dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/lblDe"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="DE: " />
-
-                    <Spinner
-                        android:id="@+id/cboDe"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="40dp"
-                        android:entries="@array/conversorArea" />
-
-                    <TextView
-                        android:id="@+id/lblA"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/cboDe"
-                        android:layout_marginTop="20dp"
-                        android:text="A: " />
-
-                    <Spinner
-                        android:id="@+id/cboA"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/cboDe"
-                        android:layout_marginLeft="40dp"
-                        android:layout_marginTop="20dp"
-                        android:entries="@array/conversorArea" />
-
-                    <EditText
-                        android:id="@+id/txtcantidad"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/cboA"
-                        android:layout_marginTop="20dp"
-                        android:hint="Cantidad" />
-
-                    <TextView
-                        android:id="@+id/lblRespuesta"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/txtcantidad"
-                        android:layout_marginTop="20dp"
-                        android:text="Respuesta: ?" />
-
-                    <Button
-                        android:id="@+id/btnCalcular"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/lblRespuesta"
-                        android:layout_marginTop="20dp"
-                        android:text="Calcular" />
-                </RelativeLayout>
-            </FrameLayout>
-        </LinearLayout>
-    </TabHost>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnAgregarAmigos"
+        android:src="@android:drawable/ic_input_add"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
