--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,18 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/txtBuscarAmigos"
-        android:hint="Buscar amigos"
+        android:id="@+id/txtBuscarProductos"
+        android:hint="Buscar producto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <ListView
-        android:id="@+id/ltsamigos"
+        android:id="@+id/ltsproductos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnAgregarAmigos"
+        android:id="@+id/btnAgregarProducto"
         android:src="@android:drawable/ic_input_add"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
