--- a/app/src/main/res/layout/listview_imagenes.xml
+++ b/app/src/main/res/layout/listview_imagenes.xml
@@ -30,10 +30,10 @@
         android:id="@+id/lblpresentacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lblprecio"
+        android:layout_below="@id/lblcodigo"
         android:layout_marginLeft="80dp"
         android:layout_marginTop="5dp"
-        android:text="2626-2222"
+        android:text="presentacion"
         android:textColor="@color/black"
         android:textSize="12sp" />
 
@@ -41,7 +41,25 @@
         android:id="@+id/lblprecio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/lbldescripcion"
+        android:layout_marginLeft="80dp"
+        android:textColor="@color/black"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/lblcodigo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/lblTitulo"
+        android:layout_marginLeft="80dp"
+        android:textColor="@color/black"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/lbldescripcion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/lblpresentacion"
         android:layout_marginLeft="80dp"
         android:textColor="@color/black"
         android:textSize="12sp" />
