--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,25 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/txtBuscarProductos"
-        android:hint="Buscar producto"
+        android:id="@+id/txtbuscar"
+        android:hint="Buscar productos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
     <ListView
-        android:id="@+id/ltsproductos"
+        android:id="@+id/listpeliculas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnAgregarProducto"
-        android:src="@android:drawable/ic_input_add"
+        android:id="@+id/btnagregar"
+        android:src="@android:drawable/ic_menu_add"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+
 </RelativeLayout>
