--- a/app/src/main/res/layout/listview_imagenes.xml
+++ b/app/src/main/res/layout/listview_imagenes.xml
@@ -7,60 +7,31 @@
     <androidx.cardview.widget.CardView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         app:cardCornerRadius="150dp">
         <ImageView
-            android:id="@+id/imgPhoto"
+            android:id="@+id/miniatura"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"/>
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/lblTitulo"
+        android:id="@+id/lbltitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="80dp"
-        android:layout_marginTop="10dp"
-        android:text="Marca"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/lblpresentacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/lblcodigo"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="5dp"
-        android:text="presentacion"
-        android:textColor="@color/black"
-        android:textSize="12sp" />
+        android:layout_marginTop="20dp"
+        android:text="" />
 
     <TextView
         android:id="@+id/lblprecio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/lbldescripcion"
+        android:layout_below="@+id/lbltitulo"
         android:layout_marginLeft="80dp"
-        android:textColor="@color/black"
-        android:textSize="12sp" />
+        android:layout_marginTop="8dp"
+        android:text="" />
 
-    <TextView
-        android:id="@+id/lblcodigo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/lblTitulo"
-        android:layout_marginLeft="80dp"
-        android:textColor="@color/black"
-        android:textSize="12sp" />
 
-    <TextView
-        android:id="@+id/lbldescripcion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/lblpresentacion"
-        android:layout_marginLeft="80dp"
-        android:textColor="@color/black"
-        android:textSize="12sp" />
 </RelativeLayout>
