--- a/app/src/main/res/menu/menu_productos.xml
+++ b/app/src/main/res/menu/menu_productos.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/mnxAgregar" android:title="Agregar">Agregar</item>
-    <item android:id="@+id/mnxModificar" android:title="Modificar">Modificar</item>
-    <item android:id="@+id/mnxEliminar" android:title="Eliminar">Eliminar</item>
+    <item android:id="@+id/mxnVistaP" android:title="Ver Producto">Ver</item>
 </menu>
